--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
     }
 }
 
+ext {
+    lifecycle_version = "1.1.1"
+    room_version = "1.1.0" // or, for latest rc, use "1.1.1-rc1"
+    dagger_version = "2.14.1"
+}
+
+
 allprojects {
     repositories {
         google()
